fix: Yet another fix to correct when hamburger is displayed on smaller screens.

--- a/src/components/navigationBar/navigationBar.css
+++ b/src/components/navigationBar/navigationBar.css
@@ -4,7 +4,7 @@
 
 .navigation_bar {
   display: grid;
-  grid-template-columns: .9fr .2fr;
+  grid-template-columns: .9fr .2fr .2fr;
   background-color: black;
   height: 40px;
   min-width: 100vw;
@@ -64,25 +64,33 @@
 
 /* For tablet screens */
 @media screen and (max-width: 768px) {
-  .navigation_bar {
-    align-items: center;
-    place-items: center;
-  }
-
-  .navigation_bar ul li {
-    display: grid;
-    margin: 10px 0;
-  }
-
-  .link.right {
-    text-align: center;
-    margin-top: 10px;
-  }
-
-  .navigation_bar .hamburger-nav {
-    display: grid;
-    place-items: center;
-  }
+    .navigation_bar {
+      grid-template-columns: 1fr;
+    }
+  
+    .navigation_bar .hamburger-nav {
+      display: grid;
+      place-items: center;
+      padding: 10px;
+    }
+  
+    .navigation_bar .menu-items {
+      display: none;
+    }
+  
+    .navigation_bar.open .menu-items {
+      display: block;
+    }
+  
+    .navigation_bar ul {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .navigation_bar ul li {
+      display: block;
+      margin: 10px 0;
+    }
 }
 
 /* For mobile screens */
